Added new Maven examples: Custom Model, Custom Action, Webscript and Custom Dashlet